--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -77,11 +77,11 @@
 <hr/>
 {% for blog in blogs.all%}
 <a href="" ><h3>{{ blog.title }}</h3></a>
-{{ blog.pub_date }}
+{{ blog.pub_date_preety }}
 <br/>
 <img class="img-fluid"src="{{ blog.image.url }}" height="200" width="200"/>
 <br/>
-<p>{{ blog.body }}</p>
+<p>{{ blog.summary }}</p>
 
 {% endfor%}
 </div>
