--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,13 +1,13 @@
-
 <!doctype html>
 <html lang="en">
   <head>
+    {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>Album example · Bootstrap</title>
+    <title>Johar's Blog</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -47,20 +47,20 @@
   <body>
     <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Quaid Johar</a>
+  <a class="navbar-brand" href="{% url 'home' %}">Quaid Johar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Github</a>
+        <a class="nav-link" href="https://github.com/Equinox-13s">Github</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Resume</a>
+        <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Blog</a>
+        <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
       </li>
     </ul>
   </div>
@@ -76,7 +76,7 @@
 <h2>Latest Posts</h2>
 <hr/>
 {% for blog in blogs.all%}
-<a href="" ><h3>{{ blog.title }}</h3></a>
+<a href="{% url 'detail' blog.id %}" ><h3>{{ blog.title }}</h3></a>
 {{ blog.pub_date_preety }}
 <br/>
 <img class="img-fluid"src="{{ blog.image.url }}" height="200" width="200"/>
